[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Zelda-pack/objects.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Interfaces/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://Assets/bomb-assets/1-Bomb Off/1.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 63.8559, 289.141, 64.7044, 28.2111 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 33.094, 49.5512, 32.2637, 40.6284 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 63.3443, 1.31028, 15.31, 14.3445 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0.942162, 65.2848, 12.958, 12.5308 )

[node name="UserInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 14.0
margin_top = 12.0
margin_right = 78.0
margin_bottom = 42.0
rect_scale = Vector2( 4.5, 4 )
texture = SubResource( 4 )

[node name="BombIcon" type="TextureRect" parent="."]
margin_left = 173.0
margin_top = 42.0
margin_right = 223.0
margin_bottom = 92.0
texture = SubResource( 3 )
expand = true
stretch_mode = 4

[node name="BombsLabel" type="Label" parent="BombIcon"]
margin_left = 24.0
margin_top = 0.999999
margin_right = 74.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="HeartIcon" type="TextureRect" parent="."]
margin_left = 122.0
margin_top = 48.0
margin_right = 172.0
margin_bottom = 98.0
rect_scale = Vector2( 0.8, 0.8 )
texture = SubResource( 1 )
expand = true

[node name="HeartsLabel" type="Label" parent="HeartIcon"]
margin_left = 33.75
margin_top = -1.25
margin_right = 83.75
margin_bottom = 48.75
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="CoinIcon" type="TextureRect" parent="."]
margin_left = 230.0
margin_top = 49.0
margin_right = 280.0
margin_bottom = 99.0
rect_scale = Vector2( 0.8, 0.8 )
texture = SubResource( 2 )
expand = true

[node name="CoinsLabel" type="Label" parent="CoinIcon"]
margin_left = 28.75
margin_right = 78.75
margin_bottom = 50.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
